# algobosol_web

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
pages/: coin.py  stock.py
